modification du ra[port

--- a/8.OOP/300155281/RAPPORT.ipynb
+++ b/8.OOP/300155281/RAPPORT.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from carre import Carre, afficher_carre\n",
-    "from cercle import Cercle, afficher_cercle\n",
+    "from carre import Carre\n",
+    "from cercle import Cercle\n",
     "\n",
     "\n",
     "c1 = Carre(4)\n",
@@ -102,25 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b889f759-2a94-4bdd-85b6-bdd98e181506",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'afficher_cercle' is not defined",
+     "evalue": "name 'afficher_Carre' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mafficher_cercle\u001b[49m(c2)\n",
-      "\u001b[31mNameError\u001b[39m: name 'afficher_cercle' is not defined"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mafficher_Carre\u001b[49m(c1)\n\u001b[32m      2\u001b[39m afficher_Cercle(c2)\n",
+      "\u001b[31mNameError\u001b[39m: name 'afficher_Carre' is not defined"
      ]
     }
    ],
    "source": [
-    "afficher_carre(c1)\n",
-    "afficher_cercle(c2)\n"
+    "afficher_Carre(c1)\n",
+    "afficher_Cercle(c2)\n"
    ]
   },
   {
