remove deleted files

--- a/5.Jupyter/300155281/RAPPORT.ipynb
+++ b/5.Jupyter/300155281/RAPPORT.ipynb
@@ -1,19 +1,56 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "46f832e7-aa54-42f5-bb04-14066ccdc439",
+   "cell_type": "markdown",
+   "id": "1bad2f78-3a6f-465c-8058-5f225e930241",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "i=0"
+    "# 🌟 Rapport d'Exploration Aléatoire 🌟\n",
+    "\n",
+    "Ce rapport présente un exemple simple de génération de données aléatoires et de visualisation dans un notebook Jupyter.\n",
+    "\n",
+    "Nous allons voir :  \n",
+    "1. Des mots et nombres aléatoires  \n",
+    "2. Un graphique aléatoire  \n",
+    "3. Une citation aléatoire\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e65eca19-a044-482b-8b4e-79d27312d77e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mot aléatoire : AI\n",
+      "Chiffre aléatoire : 84\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import des bibliothèques nécessaires\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# --------------------------\n",
+    "# 1️⃣ Mot et chiffre aléatoire\n",
+    "# --------------------------\n",
+    "mots = [\"Python\", \"Git\", \"Data\", \"Jupyter\", \"Machine Learning\", \"AI\", \"Notebook\"]\n",
+    "mot_aleatoire = random.choice(mots)\n",
+    "chiffre_aleatoire = random.randint(1, 100)\n",
+    "\n",
+    "print(f\"Mot aléatoire : {mot_aleatoire}\")\n",
+    "print(f\"Chiffre aléatoire : {chiffre_aleatoire}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65eca19-a044-482b-8b4e-79d27312d77e",
+   "id": "28bfea54-5354-476f-9a5b-1ba4556a8c49",
    "metadata": {},
    "outputs": [],
    "source": []
