ajout de fichier

--- a/6.Variables/300151483/RAPPORT.ipynb
+++ b/6.Variables/300151483/RAPPORT.ipynb
@@ -6,7 +6,13 @@
    "id": "1f088488-9287-4e3c-adfc-ba9c3345a90a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 🧮 Figures géométriques en 3D\n",
+    "\n",
+    "**Nom :** Arnold  \n",
+    "**ID Boréal :** 300151483  \n",
+    "**Signature :** ✍️  "
+   ]
   }
  ],
  "metadata": {
