ajout de fichier

--- a/6.Variables/300151483/RAPPORT.ipynb
+++ b/6.Variables/300151483/RAPPORT.ipynb
@@ -1,18 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7d92ae35-b61a-4898-9d19-437a5181cf2f",
+   "metadata": {},
+   "source": [
+    " \n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | arnauld |\n",
+    "| 🆔  | 300151483           |\n",
+    "\n",
+    "\n",
+    "Ce notebook présente trois sections :\n",
+    "1. Le module `embellisseur` et la fonction `f`\n",
+    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
+    "3. Les ensembles (`set`) et la compréhension"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f088488-9287-4e3c-adfc-ba9c3345a90a",
+   "id": "db7f174d-aa35-428b-8df7-946350c94710",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 🧮 Figures géométriques en 3D\n",
-    "\n",
-    "**Nom :** Arnold  \n",
-    "**ID Boréal :** 300151483  \n",
-    "**Signature :** ✍️  "
-   ]
+   "source": []
   }
  ],
  "metadata": {
