Mise à jour du RAPPORT.ipynb dans 6.Variables

--- a/6.Variables/300151483/RAPPORT.ipynb
+++ b/6.Variables/300151483/RAPPORT.ipynb
@@ -22,8 +22,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db7f174d-aa35-428b-8df7-946350c94710",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'embellisseur'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01membellisseur\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m f\n\u001b[32m      3\u001b[39m exemples = [\n\u001b[32m      4\u001b[39m     \u001b[32m10\u001b[39m,\n\u001b[32m      5\u001b[39m     \u001b[32m2.718\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33mx\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33my\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m}\n\u001b[32m     10\u001b[39m ]\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m exemples:\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'embellisseur'"
+     ]
+    }
+   ],
+   "source": [
+    "from embellisseur import f\n",
+    "\n",
+    "exemples = [\n",
+    "    10,\n",
+    "    2.718,\n",
+    "    \"hello\",\n",
+    "    [7, 8, 9],\n",
+    "    (10, 20, 30),\n",
+    "    {\"x\": 1, \"y\": 2}\n",
+    "]\n",
+    "\n",
+    "for e in exemples:\n",
+    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    resultat = f(e)\n",
+    "    for k, v in resultat.items():\n",
+    "        print(f\"{k:12} -> {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12334fff-efae-49ef-bdf4-b2459fa95a0c",
    "metadata": {},
    "outputs": [],
    "source": []
