--- a/8.OOP/300155187/RAPPORT.ipynb
+++ b/8.OOP/300155187/RAPPORT.ipynb
@@ -31,25 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "fb51cfc0-a0af-4dc1-a56a-b0e9f6d8d778",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "from carre import Carre\n",
     "from cercle import Cercle\n",
     "from losange import losange\n",
     "\n",
+    "\n",
     "c1 = Carre(4)\n",
     "c2 = Cercle(3)\n",
-    "c3 = losange(10,8)"
+    "c3 = losange(10,8)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1d5fc459",
-   "metadata": {},
+   "execution_count": 27,
+   "id": "bb33663c-4ad5-4ac9-abac-30c0f0c32885",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -58,53 +67,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8b911757",
-   "metadata": {},
+   "execution_count": 28,
+   "id": "b7c30d3d-e2b7-4ba4-a000-88479efa17d5",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def afficher_carre(carre):\n",
-    "     cote = carre.cote\n",
-    "     x = [0, cote, cote, 0, 0]\n",
-    "     y = [0, 0, cote, cote, 0]\n",
+    "    cote = carre.cote\n",
+    "    x = [0, cote, cote, 0, 0]\n",
+    "    y = [0, 0, cote, cote, 0]\n",
     "\n",
-    "     plt.figure(figsize=(5, 5))\n",
-    "     plt.plot(x, y)\n",
-    "     plt.fill(x, y, alpha=0.3)\n",
-    "     plt.title(f\"Carré — côté={cote}, aire={carre.aire()}\")\n",
-    "     plt.axis(\"equal\")\n",
-    "     plt.grid(True)\n",
-    "     plt.show()"
+    "    plt.figure(figsize=(5, 5))\n",
+    "    plt.plot(x, y)\n",
+    "    plt.fill(x, y, alpha=0.3)\n",
+    "    plt.title(f\"Carré — côté={cote}, aire={carre.aire()}\")\n",
+    "    plt.axis(\"equal\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "e9fd51f9",
-   "metadata": {},
+   "execution_count": 29,
+   "id": "7024b34e-cbe4-46e5-83b3-f9ea9fe3bc7e",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def afficher_cercle(cercle):\n",
-    "     r = cercle.rayon\n",
-    "     theta = np.linspace(0, 2*np.pi, 300)\n",
+    "    r = cercle.rayon\n",
+    "    theta = np.linspace(0, 2*np.pi, 300)\n",
     "\n",
-    "     x = r * np.cos(theta)\n",
-    "     y = r * np.sin(theta)\n",
+    "    x = r * np.cos(theta)\n",
+    "    y = r * np.sin(theta)\n",
     "\n",
-    "     plt.figure(figsize=(5, 5))\n",
-    "     plt.plot(x, y)\n",
-    "     plt.fill(x, y, alpha=0.3)\n",
-    "     plt.title(f\"Cercle — rayon={r}, aire={cercle.aire():.2f}\")\n",
-    "     plt.axis(\"equal\")\n",
-    "     plt.grid(True)\n",
-    "     plt.show()"
+    "    plt.figure(figsize=(5, 5))\n",
+    "    plt.plot(x, y)\n",
+    "    plt.fill(x, y, alpha=0.3)\n",
+    "    plt.title(f\"Cercle — rayon={r}, aire={cercle.aire():.2f}\")\n",
+    "    plt.axis(\"equal\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "482b3328",
-   "metadata": {},
+   "execution_count": 32,
+   "id": "ebf022a6",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -129,9 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "000d4955",
-   "metadata": {},
+   "execution_count": 34,
+   "id": "a383ba23-521c-40a2-8f53-df635cff6ddf",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -171,29 +196,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ebb00ccf",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "600ee8d2-fa97-48fa-9e91-2d8bdf0d417c",
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "INF1042-203-25A-04",
    "language": "python",
-   "name": "python3"
+   "name": "inf1042-203-25a-04"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "name": ""
   }
  },
  "nbformat": 4,
